<resources>
    <string name="app_name">LessonMaker</string>
    <string name="highlight_text">Explore, Learn &amp; Succeed</string>
    <string name="username">Username</string>
    <string name="searchKeyword">Search Lesson Keyword</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="biit_logo">Biit logo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back_arrow">backArrow</string>
    <string name="Heading">H</string>
    <string name="bold_icon">Bold Icon</string>
    <string name="italic_icon">Italic icon</string>
    <string name="underline_icon">underLine icon</string>
    <string name="left_align">left align</string>
    <string name="center_align">center align</string>
    <string name="right_align">right align</string>
    <string name="bullet_icon">bullet icon</string>
    <string name="image_icon">image Icon</string>
    <string name="link_icon">link icon</string>
    <string name="code_icon">code icon</string>
    <string name="heading_icon">heading icon</string>
    <string name="keyword_icon">keyword icon</string>
    <string name="save">Save</string>
    <string name="video_icon">video icon</string>
    <string name="undo_icon">undo icon</string>
    <string name="redo_icon">redo icon</string>
    <string name="insert_link">Insert Link</string>
    <string name="insert">Insert</string>
    <string name="course_name">Course Code:</string>
    <string name="week_no">Week No</string>
    <string name="sideNavbar">sideNavBar</string>
    <string name="student_name_and_semester">Student Name &amp; Semester</string>
    <string name="subject_name">Subject Name</string>
    <string name="teacher_s_name">Teacher\'s Name</string>
    <string name="open">OPEN</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="my_courses">MY COURSES</string>
    <string name="edit">Edit</string>
    <string name="recently_added_courses">RECENTLY ADDED COURSES</string>
    <string name="create_new">Create New</string>
    <string name="foldericon">folderIcon</string>
    <string name="title_activity_student_side_drawer">StudentSideDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_notes">OPEN NOTES</string>
    <string name="downloaded_notes">Downloaded Notes</string>
    <string name="requests">Request</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="backbutton">backButton</string>
    <string name="generate_book">Generate Book</string>
    <string name="no_lesson_created_yet">No Lesson Created Yet</string>
    <string name="course_code_here">Course Code here</string>
    <string name="no_notes_created_yet">No notes created yet</string>
</resources>