<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="56dp"
        android:text="@string/highlight_text"
        android:textColor="@color/biitGreen"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    UserName field-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/biit_logo"
        android:src="@drawable/biit_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutUsername"
        android:layout_width="350dp"
        android:layout_height="60dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@android:style/TextAppearance.Material.Small"
        app:boxBackgroundColor="@color/gray"
        app:boxStrokeColor="@android:color/black"
        app:startIconDrawable="@drawable/person_icon"
        app:hintTextColor="@color/black"
        app:cursorColor="@color/biitGreen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:textSize="17sp"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

<!--   Password Field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutUsername"
        app:hintTextAppearance="@android:style/TextAppearance.Material.Small"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/gray"
        app:boxStrokeColor="@android:color/black"
        app:startIconDrawable="@drawable/password_icon"
        app:hintTextColor="@color/black"
        app:cursorColor="@color/biitGreen"
        app:passwordToggleEnabled="true">
    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="50dp"
            android:textSize="17sp"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutPassword"
        app:layout_constraintVertical_bias="0.05"
        app:cardCornerRadius="150dp"
        android:paddingBottom="10dp"
        app:cardElevation="10dp">


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="270dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/biitGreen"
            android:elevation="200dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutPassword" />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>