<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/biitGreen"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/Subject"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/open"
                    android:scaleType="centerInside"
                    android:src="@drawable/outline_folder_copy_24" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/SubjectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/jost_medium"
                android:text="@string/subject_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.247" />

            <TextView
                android:id="@+id/teachersName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/jost_medium"
                android:text="@string/week_no"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/SubjectName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/SubjectName"
                app:layout_constraintTop_toBottomOf="@+id/SubjectName"
                app:layout_constraintVertical_bias="0.0" />


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="270dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/Share"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/jost_medium"
                android:text="@string/share"
                android:textAlignment="center"
                android:textColor="@color/biitGreen"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/SubjectName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/openSubjectNotes"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/jost_medium"
                android:text="@string/view"
                android:textAlignment="center"
                android:textColor="@color/biitGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/Share"
                app:layout_constraintTop_toBottomOf="@+id/Share" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>