<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/biitGreen"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <!-- Subject Image Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.25">

                <ImageButton
                    android:id="@+id/Subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/open"
                    android:scaleType="centerInside"
                    android:src="@drawable/outline_folder_copy_24" />
            </androidx.cardview.widget.CardView>

            <!-- Subject Name -->
            <TextView
                android:id="@+id/SubjectName"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/subject_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/jost_medium"
                app:layout_constraintStart_toEndOf="@id/cardView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonOpenCard"
                app:layout_constraintHorizontal_bias="0.0" />

            <!-- Teacher Name -->
            <TextView
                android:id="@+id/teachersName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/teacher_s_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/jost_medium"
                app:layout_constraintStart_toStartOf="@id/SubjectName"
                app:layout_constraintTop_toBottomOf="@id/SubjectName"
                app:layout_constraintEnd_toEndOf="@id/SubjectName" />

            <!-- Open Button Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/buttonOpenCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                app:cardElevation="6dp"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/openSubjectNotes"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:text="@string/open"
                    android:textStyle="bold"
                    android:textColor="@color/biitGreen"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/jost_medium" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>